deploy-yaml/kubernetes-cd.yaml
apiVersion: v1
kind: Service
metadata:
  name: ops-sre-kubernetes-cd
  namespace: spatio-dev
spec:
  type: LoadBalancer
  ports:
  - name: serverport
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    app: ops-sre-kubernetes-cd
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ops-sre-kubernetes-cd
  namespace: spatio-dev
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ops-sre-kubernetes-cd
  strategy:
    rollingUpdate:
      maxSurge: 10%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        rollme: 5YI5s
      creationTimestamp: null
      labels:
        app: ops-sre-kubernetes-cd
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: eks-account
      containers:
      - command:
        - /bin/sh
        - /home/service/kubernetes-cd/bin/deploy.sh
        image: 993041778363.dkr.ecr.us-east-1.amazonaws.com/ops-sre-kubernetes-cd-aws:v6
        imagePullPolicy: Always
        lifecycle:
          postStart:
            exec:
              command:
              - /bin/echo
              - -e
              - postStart is doing nothing
          preStop:
            exec:
              command:
              - sleep
              - "5"
        livenessProbe:
          failureThreshold: 5
          initialDelaySeconds: 20
          periodSeconds: 3
          successThreshold: 1
          tcpSocket:
            port: 8888
          timeoutSeconds: 1
        name: ops-sre-kubernetes-cd
        ports:
        - containerPort: 8888
          name: serverport
          protocol: TCP
        readinessProbe:
          failureThreshold: 10
          initialDelaySeconds: 20
          periodSeconds: 3
          successThreshold: 1
          tcpSocket:
            port: 8888
          timeoutSeconds: 1
        resources:
          limits:
            cpu: "2"
            memory: 1Gi
          requests:
            cpu: "2"
            memory: 1Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
          #- name: kubernetes-config
          #  mountPath: /opt/kubernetescd/aws_dev_key_config
          #  subPath: aws_dev_key_config
        - mountPath: /home/service/kubernetes-cd/logs
          name: app-logs
      volumes:
        #- name: kubernetes-config
        #  configMap:
        #    name: kubernetes-config
      - emptyDir: {}
        name: app-logs
